# testbench

./: .gitignore  .travis.yml  Changelog.md  LICENSE  README.md  TestBench.hs  stack.yaml  testbench.cabal  testbench.haskell-ci
examples/: Simple.hs
src/: TestBench.hs
src/Criterion/: Tree.hs
src/TestBench/: Commands.hs  Constraints.hs  Evaluate.hs  LabelTree.hs  Tree.hs
